--- a/_posts/2017-09-06-services-1.markdown
+++ b/_posts/2017-09-06-services-1.markdown
@@ -14,11 +14,15 @@ One of the most important aspects of mission success in a Hostage Rescue operati
   
 ### SCENARIO
 
-TBD
+A senior Canadian Government Official has been kidnapped and is being held hostage in a [House/Office/Warehouse/Farm]. An incident response team has been dispatched comprised of both local and federal police authorities. They have each deployed drones with various camera technologies (high resolution, electro-optics, infra-red, etc.) that provide a live/near-real time feed to the analysts on the ground. 
+
+Due to certain complexities on the ground, law enforcement agencies have requested the support of the Canadian Armed Forces, and CANSOFCOM is called upon to conduct a hostage rescue operation.
+
+The CANSOFCOM analysts have an important job of determining historical information of the hostage situation from previous footage from local security forces, in addition to live on-going footage of various drones. The analysts need to identify important key indicators (as described in the Challenge, below) that will help ensure a successful rescue operation by CANSOFCOM operators.
   
 ### CHALLENGE
 
-CANSOFCOM seeks to automate the persistent monitoring process to discern patterns of personnel (both threat actors and innocent civilians), vehicles, distinguishing features (physical, pattern, movement, etc.), and to develop normalcy in patterns, which can be used to isolate deviations.  
+CANSOFCOM seeks to automate the persistent monitoring process to discern patterns of personnel (both threat actors and innocent civilians), vehicles, distinguishing features (physical, pattern, movement, etc.), and to develop normalcy in patterns, which can be used to isolate deviations in support of a hostage rescue operation.
 
 The principle objective of automating the process is to reduce the person power required for the analysis of surveillance footage; thus allowing CANSOFCOM personnel more time and space to perform more pertinent tasks related to the operation.
   
