--- a/_posts/2017-09-06-services-1.markdown
+++ b/_posts/2017-09-06-services-1.markdown
@@ -43,7 +43,7 @@ Video footage for the purposes of this CANSOFCOM hackathon challenge can be sour
 
 Please visit [http://www.viratdata.org/](http://www.viratdata.org/) to learn more.
 
-+ To browse and download content, visit [https://data.kitware.com/#collection/56f56db28d777f753209ba9f/folder/56f57e748d777f753209bed6](https://data.kitware.com/#collection/56f56db28d777f753209ba9f/folder/56f57e748d777f753209bed6)
++ To browse and download content, visit [https://data.kitware.com/](https://data.kitware.com/#collection/56f56db28d777f753209ba9f/folder/56f57e748d777f753209bed6)
 	- To use an API to access the content, read their documentation at [https://data.kitware.com/api/v1](https://data.kitware.com/api/v1)
   
 ### IDEAS FOR CONSIDERATION/INSPIRATION 
